final downgrade to the java 8