@@ -71,7 +71,7 @@ public class MainPanel extends JPanel implements GraphicsResource
         {
             UserCanvas userCanvas = new MenuCanvas(canvas);
             TimeMeter frameMeter = new DefaultTimeMeter();
-            canvas.drawText(() -> "fps = %s".formatted(String.valueOf((int)(1f / frameMeter.measureTime()))), a -> a.call(0f, 0f, 300f, 50f), a -> a.call(255, 255, 255, 255));
+            canvas.drawText(() -> String.format("fps = %s", String.valueOf((int)(1f / frameMeter.measureTime()))), a -> a.call(0f, 0f, 300f, 50f), a -> a.call(255, 255, 255, 255));
             IntStream.range(0, buttons.length).boxed().forEach(b -> 
             {
                 userCanvas.drawButton(() -> buttons[b], a -> a.call(0f, (b + 1) * 55f, 300f, 50f), c -> c.call(255, 150, 50, 255), c -> c.call(100, 100, 100, 255), () -> System.out.println(b));
@@ -91,7 +91,7 @@ public class MainPanel extends JPanel implements GraphicsResource
                 p.paint(device);
             }
         };
-        var bakedDevice = new PostponedGraphicsDevice();
+        PostponedGraphicsDevice bakedDevice = new PostponedGraphicsDevice();
         painter.paint(bakedDevice);
         rootPainter = bakedDevice;
 
